fixing letter-spacing

--- a/public/styles/encore.css
+++ b/public/styles/encore.css
@@ -7,6 +7,7 @@ body{
   margin:0;
   color:#474E5B;
   min-width:1024px;
+  letter-spacing: 0;
 }
 
 @media 
